--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="bg-grey" lang="es">
+<html data-theme="dark" lang="es">
 <head>
-<link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.5/dist/full.css" rel="stylesheet" type="text/css">
 <script src="https://cdn.tailwindcss.com"></script>
+<link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.5/dist/full.css" rel="stylesheet" type="text/css">
 <title>Creadores de contenido</title>
 </head>
 
-<body>
+<body class="bg-grey">
 <h1 class="text-center text-2xl">Ciberseguridad</h1>
 <hr class="my-4">
 <!--JohnHammond-->
@@ -22,7 +22,7 @@
      John Hammond
     </strong>
     <p>
-     Enfocado a ciberseguridad, requieres de un conocimiento previo del campo para comprender el canal (No recomendable para novatos)
+     Enfocado a ciberseguridad, requieres de un conocimiento previo del campo para comprender el canal (No recomendable para novatos).
     </p>
    </div>
   </div>
@@ -40,7 +40,7 @@
      crow
     </strong>
     <p>
-     Creación de malware y explicación de cómo funciona el mismo a bajo nivel
+     Creación de malware y explicación de cómo funciona el mismo a bajo nivel.
     </p>
    </div>
   </div>
@@ -58,7 +58,7 @@
      Flashback Team
     </strong>
     <p>
-     Vulnerar y explotar sistemas, tienen unos videos sobre hacking físico maravillosos
+     Vulnerar y explotar sistemas, tienen unos videos sobre hacking físico maravillosos.
     </p>
    </div>
   </div>
@@ -238,7 +238,7 @@
      Tech Raj 
     </strong>
     <p>
-     Aquí encontraras de todo, tienes desde programación hasta distintos ataques explicados a alto nivel. Para iniciarte en el mundo de la ciberseguridad puede ser un buen canal
+     Aquí encontraras de todo, tienes desde programación hasta distintos ataques explicados a alto nivel. Para iniciarte en el mundo de la ciberseguridad puede ser un buen canal.
     </p>
    </div>
   </div>
@@ -294,7 +294,7 @@
      Computer Clan 
     </strong>
     <p>
-     Dedicado a la review de distintos aparatos electrónicos curiosos
+     Dedicado a la review de distintos aparatos electrónicos curiosos.
     </p>
    </div>
   </div>
@@ -312,7 +312,7 @@
      DanteGTX
     </strong>
     <p>
-     Dedicado al hardware y al montaje de equipos
+     Dedicado al hardware y al montaje de equipos.
     </p>
    </div>
   </div>
@@ -330,7 +330,7 @@
      Hardware 360º
     </strong>
     <p>
-     Entre su contenido, destaca el noticiario donde informa sobre las novedades semanales en la industria del hardware (Lamentablemente lleva inactivo un año) 
+     Entre su contenido, destaca el noticiario donde informa sobre las novedades semanales en la industria del hardware (Lamentablemente lleva inactivo un año).
     </p>
    </div>
   </div>
@@ -348,7 +348,7 @@
      Hardware Haven
     </strong>
     <p>
-     Por lo general tiene un contenido variado entre hardware y software. Actualmente parece estar enfocado en el homeLab y servidores
+     Por lo general tiene un contenido variado entre hardware y software. Actualmente parece estar enfocado en el homeLab y servidores.
     </p>
    </div>
   </div>
@@ -366,7 +366,7 @@
      LGR
     </strong>
     <p>
-     Canal de hardware retro
+     Canal de hardware retro.
     </p>
    </div>
   </div>
@@ -440,7 +440,7 @@
      Awesome Open Source
     </strong>
     <p>
-     Sube software de código abierto y gratuito, es probable que encuentres alguno que te interese o sustituya algún otro programa privativo del que hagas uso actualmente
+     Sube software de código abierto y gratuito, es probable que encuentres alguno que te interese o sustituya algún otro programa privativo del que hagas uso actualmente.
     </p>
    </div>
   </div>
@@ -568,7 +568,7 @@
      Facu Peralta
     </strong>
     <p>
-     Documentales sobre consolas, la industria que rodea a estas y software (Lo conocí por una serie donde explicaba más a detalle cómo se realizó el pirateo de múltiples consolas)
+     Documentales sobre consolas, la industria que rodea a estas y software (Lo conocí por una serie donde explicaba más a detalle cómo se realizó el pirateo de múltiples consolas).
     </p>
    </div>
   </div>
@@ -586,7 +586,7 @@
      Guinxu
     </strong>
     <p>
-     Desarrollo de videojuegos (Enfocado a como se funcionan distintas mecánicas de los mismos)
+     Desarrollo de videojuegos (Enfocado a como se funcionan distintas mecánicas de los mismos).
     </p>
    </div>
   </div>
@@ -640,7 +640,7 @@
      Jim Broning
     </strong>
     <p>
-     Canal dedicado a espiar y destruir call centers de scammers
+     Canal dedicado a espiar y destruir call centers de scammers.
     </p>
    </div>
   </div>
